--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,13 @@
   height: 40vmin;
   pointer-events: none;
 }
+.btn {
+  margin-right: 5px;
+}
+
+.divbtn {
+  float: left;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
